--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "clsx": "^2.1.1",
     "groq-sdk": "^0.30.0",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
