--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-helmet-async": "^2.0.5",
+    "react-head": "^3.4.2",
     "react-router-dom": "^7.8.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
